ticket:3 added requests.html, turned to template sys, added styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,7 @@
     </head>
     <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
         {% block content %}{% endblock content %}
+        <hr>
+        <a href="#">requests</a>
     </body>
 </html>
