--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -20,7 +20,13 @@ h1 {
     width: 400px;
     float: left;
     visibility: visible;
+    padding-bottom: 80px;
 }
 #bio {
     padding-top: 30px;
+}
+hr {
+    border: 1px solid rgb(72, 72, 72);
+    margin: 0px;
+    width: 600px;
 }
