ticket:3 added ajax request, renders requests

--- a/apps/user_profile/templates/requests.html
+++ b/apps/user_profile/templates/requests.html
@@ -4,3 +4,6 @@
 {% block content %}
     <div class="requests"></div>
 {% endblock %}
+{% block javascript %}
+    <script src="{% static 'js/requests.js' %}"></script>
+{% endblock %}
