--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -35,3 +35,15 @@ hr {
     height: 380px;
     border: 2px solid rgb(72, 72, 72);
 }
+.form-control {
+    width: 800px;
+    float: left;
+    padding-bottom: 20px;
+}
+#align-right p {
+    text-align: right;
+    padding-right: 120px;
+}
+input[type='file'] {
+    width: 180px;
+}
