ticket:8 add photo

--- a/apps/user_profile/templates/index.html
+++ b/apps/user_profile/templates/index.html
@@ -9,7 +9,8 @@
             <p>Name: {{ data.first_name }}</p>
             <p>Last name: {{ data.last_name }}</p>
             <p>Date of birth: {{ data.date_birth }}</p>
-            <div class="photo"></div>
+            <p>Photo:</p>
+            <img src="{{ data.photo.url|default_if_none:'#' }}" alt="Photo">
         </div>
         <div class="block" id="contacts">
             <p>Contacts</p>
