--- a/apps/user_profile/templates/edit.html
+++ b/apps/user_profile/templates/edit.html
@@ -18,10 +18,12 @@
                         {{ form.date_birth }}
                     </p>
                     <p>
-                        <label>Photo</label>
-                        <input type="file">
+                        {{ form.photo.label_tag }}
+                        {{ form.photo }}
                     </p>
-                <div class="photo"></div>
+                <div>
+                    <img id="photo" src="{{ form.photo.value }}" alt="Photo">
+                </div>
                 </div>
                 <div class="block">
                     <div id="align-right">
