--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -47,3 +47,15 @@ hr {
 input[type='file'] {
     width: 180px;
 }
+#header h2 {
+    text-align: center;
+    font-weight: normal;
+}
+#login-form {
+    width: 250px;
+    margin: auto;
+    text-align: right;
+}
+#btn-login-submit {
+    text-align: center;
+}
