--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -59,3 +59,10 @@ input[type='file'] {
 #btn-login-submit {
     text-align: center;
 }
+span {
+    width:45%;
+    display:inline-block;
+}
+span.login {
+    text-align:right;
+}
