ticket:8 fixed img src

--- a/apps/user_profile/templates/index.html
+++ b/apps/user_profile/templates/index.html
@@ -22,7 +22,7 @@
             <p>Last name: {{ data.last_name }}</p>
             <p>Date of birth: {{ data.date_birth }}</p>
             <p>Photo:</p>
-            <img src="{{ data.photo|default_if_none:'#' }}" alt="Photo">
+            <img src="{{ STATIC_URL }}{{ MEDIA_URL }}{{ data.photo }}" alt="Photo">
         </div>
         <div class="block" id="contacts">
             <p>Contacts</p>
