ticket:8 fixed img src in edit page

--- a/apps/user_profile/templates/edit.html
+++ b/apps/user_profile/templates/edit.html
@@ -24,7 +24,7 @@
                         {{ form.photo }}
                     </p>
                 <div>
-                    <img id="photo" src="{{ form.photo.value }}" alt="Photo">
+                    <img id="photo" src="{{ STATIC_URL }}{{ MEDIA_URL }}{{ form.photo.value }}" alt="Photo">
                 </div>
                 </div>
                 <div class="block">
