--- a/apps/user_profile/templates/edit.html
+++ b/apps/user_profile/templates/edit.html
@@ -49,7 +49,7 @@
                         <p>{{ form.bio }}</p>
                     </div>
                 </div>
-                <div>
+                <div class="form-control">
                     <div id="status"></div>
                     <input type="submit" value="Save">
                     <a href="{% url 'index' %}">Cancel</a>
