ticket:13 added priority button

--- a/apps/user_profile/templates/requests.html
+++ b/apps/user_profile/templates/requests.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 
 {% block content %}
+    <input id="prior" type="button" value="Prior 0">
     <div class="requests"></div>
 {% endblock %}
 {% block javascript %}
